--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroupsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroupsPopup.xhtml
@@ -36,7 +36,7 @@
                     <p:column headerText="#{msgs.auswahl}">
                         <h:commandLink action="#{ProzessverwaltungForm.addUserGroup}">
                             <h:graphicImage alt="add task to user group" value="/pages/images/buttons/addUser.gif"/>
-                            <f:param name="ID" value="#{user.id}"/>
+                            <f:param name="ID" value="#{usergroup.id}"/>
                         </h:commandLink>
                     </p:column>
                 </p:dataTable>
