--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsers.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsers.xhtml
@@ -35,6 +35,7 @@
                      action="#{ProzessverwaltungForm.activeUsers}"
                      oncomplete="PF('addUserDialog').show()"
                      icon="fa fa-plus-circle fa-lg"
+                     immediate="true"
                      iconPos="right"/>
 
 </ui:composition>
