--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
@@ -16,22 +16,13 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <p:dataTable var="item"
-                 value="#{ProzessverwaltungForm.process.workpieces}"
-                 rowIndexVar="index">
-        <p:column headerText="#{msgs.nr}">
-            <h:outputText value="#{index+1}"/>
+    <p:dataTable var="property"
+                 value="#{ProzessverwaltungForm.workpieces}">
+        <p:column>
+            <h:outputText value="#{property.title}"/>
         </p:column>
-        <p:column headerText="#{msgs.eigenschaften}">
-            <p:dataTable var="property"
-                         value="#{item.properties}">
-                <p:column>
-                    <h:outputText value="#{property.title}"/>
-                </p:column>
-                <p:column>
-                    <h:outputText value="#{property.value}"/>
-                </p:column>
-            </p:dataTable>
+        <p:column>
+            <h:outputText value="#{property.value}"/>
         </p:column>
         <p:column headerText="#{msgs.auswahl}">
             <h:link outcome="workpieceEdit"
