--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
@@ -48,13 +48,17 @@
         </p:column>
 
         <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
-            <h:link outcome="projectEdit"
-                    title="#{msgs.projektBearbeiten}">
-                <f:param name="id" value="#{item.id}" />
-                <i class="fa fa-pencil-square-o fa-lg"/>
-            </h:link>
-            <h:link><i class="fa fa-clone fa-lg"/></h:link>
-            <h:link><i class="fa fa-bar-chart fa-lg"/></h:link>
+            <h:form id="projectActionForm">
+                <h:link outcome="projectEdit"
+                        title="#{msgs.projektBearbeiten}">
+                    <f:param name="id" value="#{item.id}" />
+                    <i class="fa fa-pencil-square-o fa-lg"/>
+                </h:link>
+                <h:commandLink action="#{ProjekteForm.duplicateProject(item.id)}" immediate="true">
+                    <i class="fa fa-clone fa-lg"/>
+                </h:commandLink>
+                <h:link><i class="fa fa-bar-chart fa-lg"/></h:link>
+            </h:form>
         </p:column>
 
         <p:rowExpansion styleClass="expansion-class">
