--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
@@ -122,7 +122,7 @@ button .ui-icon {
 .ui-inputfield.ui-inputtext:-ms-input-placeholder { /* IE 10-11 */
     color: #d8d8d8;
 }
-.ui-inputfield.ui-inputtext::-ms-input-placeholder { /* Edge */
+.ui-inputfield.ui-inputtext:-ms-input-placeholder { /* Edge */
     color: #d8d8d8;
 }
 
@@ -307,10 +307,6 @@ tr.ui-expanded-row-content .ui-panelgrid .ui-panelgrid-cell,
 .ui-tabs.ui-tabs-top>.ui-tabs-nav,
 .ui-tabmenu .ui-tabmenu-nav {
     padding: 0;
-}
-
-.ui-tabs.ui-tabs-top > .ui-tabs-nav {
-    padding: 0 1.5em;
 }
 
 .ui-tabs.ui-tabs-top>.ui-tabs-nav li,
