--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
@@ -70,7 +70,7 @@
                 <h:outputText value="#{item.fileFormatDmsExport}"/>
 
                 <h:outputText value="#{msgs.prozessvorlagen}:"/>
-                <h:outputText value="#{item.processTitles}"/>
+                <h:outputText value="#{ProjekteForm.getProjectTemplateTitles(item.id)}"/>
             </p:panelGrid>
         </p:rowExpansion>
 
