--- a/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
@@ -35,11 +35,13 @@
                         <ui:include src="/WEB-INF/templates/includes/header.xhtml" />
                     </ui:insert>
                 </header>
-                <ul id="breadcrumb">
-                    <ui:insert name="breadcrumbs">
-                        <ui:include src="/WEB-INF/templates/includes/breadcrumbs.xhtml" />
-                    </ui:insert>
-                </ul>
+                <div id="breadcrumb-wrapper">
+                    <ul id="breadcrumb">
+                        <ui:insert name="breadcrumbs">
+                            <ui:include src="/WEB-INF/templates/includes/breadcrumbs.xhtml" />
+                        </ui:insert>
+                    </ul>
+                </div>
                 <main class="flex-item" role="main">
                     <ui:insert name="content">
                         <ui:include src="/WEB-INF/templates/includes/content.xhtml" />
