--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/content.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/content.xhtml
@@ -11,11 +11,8 @@
  *
 -->
 
-<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <div class="wrapper">
-        <section id="demo-section">
-            Maincontent (Demo)
-        </section>
-    </div>
+<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    <section id="demo-section">
+        Maincontent (Demo)
+    </section>
 </ui:composition>
