--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
@@ -18,7 +18,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <p:dataTable var="item"
                  value="#{ProzessverwaltungForm.properties}">
-        <p:column headerText="#{msgs.title}">
+        <p:column headerText="#{msgs.titel}">
             <h:outputText value="#{item.title}"/>
         </p:column>
         <p:column headerText="#{msgs.value}">
@@ -33,6 +33,10 @@
             </p:commandLink>
             <p:commandLink title="#{msgs.duplicate}" action="#{ProzessverwaltungForm.duplicateProperty}">
                 <h:outputText><i class="fa fa-files-o fa-lg"/></h:outputText>
+                <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
+            </p:commandLink>
+            <p:commandLink title="#{msgs.loeschen}" action="#{ProzessverwaltungForm.deleteProperty}">
+                <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
             </p:commandLink>
         </p:column>
