--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
@@ -36,7 +36,7 @@
             <h:outputText value="#{item.metsRightsOwner}"/>
         </p:column>
 
-        <p:column headerText="aktiv" styleClass="checkboxColumn">
+        <p:column headerText="#{msgs.active}" styleClass="checkboxColumn">
             <h:outputText>
                 <ui:fragment rendered="#{not item.projectIsArchived}">
                     <i class="fa fa-check-square-o fa-lg checkbox-checked"/>
