--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -35,14 +35,20 @@
                 <ul>
                     <li>
                         <!-- List: my tasks -->
-                        <a href="#"><i class="fa fa-bell-o fa-lg"/><h:panelGroup rendered="#{AktuelleSchritteForm.lazyDTOModel.rowCount gt 0}" styleClass="batch-count bc-alert">#{AktuelleSchritteForm.lazyDTOModel.rowCount}</h:panelGroup></a>
-                        <ul>
-                            <li><h3>#{msgs.aktuelleSchritte}</h3></li>
-                            <ui:repeat value="#{AktuelleSchritteForm.lazyDTOModel.load(0,3, 'title', null, null)}" var="task">
-                                <li><a href=""><span class="nav-item-col">#{task.title}</span><span class="nav-item-col">#{task.process.title}</span><span class="nav-item-col"><i class="fa fa-check-square-o fa-lg nc-info"/></span></a></li>
-                            </ui:repeat>
-                            <li><h:link outcome="tasks" value="#{msgs.allMyTasks} (#{AktuelleSchritteForm.lazyDTOModel.rowCount})"/></li>
-                        </ul>
+                        <a href="#"><i class="fa fa-bell-o fa-lg"/>
+                            <ui:fragment rendered="#{indexingForm.indexExists()}">
+                                <h:panelGroup rendered="#{AktuelleSchritteForm.lazyDTOModel.rowCount gt 0}" styleClass="batch-count bc-alert">#{AktuelleSchritteForm.lazyDTOModel.rowCount}</h:panelGroup>
+                            </ui:fragment>
+                        </a>
+                        <ui:fragment rendered="#{indexingForm.indexExists()}">
+                            <ul>
+                                <li><h3>#{msgs.aktuelleSchritte}</h3></li>
+                                <ui:repeat value="#{AktuelleSchritteForm.lazyDTOModel.load(0,3, 'title', null, null)}" var="task">
+                                    <li><a href=""><span class="nav-item-col">#{task.title}</span><span class="nav-item-col">#{task.process.title}</span><span class="nav-item-col"><i class="fa fa-check-square-o fa-lg nc-info"/></span></a></li>
+                                </ui:repeat>
+                                <li><h:link outcome="tasks" value="#{msgs.allMyTasks} (#{AktuelleSchritteForm.lazyDTOModel.rowCount})"/></li>
+                            </ul>
+                        </ui:fragment>
                     </li>
                     <li>
                         <!-- List: active users -->
