--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/content.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/content.xhtml
@@ -12,7 +12,7 @@
 -->
 
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <section id="demo-section">
+    <section id="content-section">
         Maincontent (Demo)
     </section>
 </ui:composition>
