--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userConfiguration/changePassword.xhtml
@@ -18,36 +18,44 @@
         xmlns:p="http://primefaces.org/ui">
 
     <h:form id="changePasswordForm">
-        <p:panelGrid id="passwordGrid" columns="2">
+        <p:panelGrid id="passwordGrid" columns="3" layout="grid">
+            <p:row>
+                <div>
+                    <!-- new password -->
+                    <h:outputLabel for="newPassword" value="#{msgs.neuesPasswort}"/>
+                    <p:password redisplay="true" id="newPassword"
+                                class="password"
+                                value="#{LoginForm.passwortAendernNeu1}"
+                                label="#{msgs.neuesPasswort}"
+                                required="true"/>
+                </div>
 
-            <!-- new password -->
-            <h:outputLabel for="newPassword" value="#{msgs.neuesPasswort}"/>
-            <p:password redisplay="true" id="newPassword"
-                        style="width: 200px;margin-right:15px"
-                        value="#{LoginForm.passwortAendernNeu1}"
-                        label="#{msgs.neuesPasswort}"
-                        required="true"/>
+                <div>
+                    <!-- repeat new password -->
+                    <h:outputLabel for="newPasswordRepeat" value="#{msgs.confirmNewPassword}"/>
+                    <p:password redisplay="true" id="newPasswordRepeat"
+                                class="password"
+                                value="#{LoginForm.passwortAendernNeu2}"
+                                label="#{msgs.confirmNewPassword}"
+                                required="true"
+                                match="newPassword"
+                                validatorMessage="#{msgs.passwordsDontMatch}"/>
+                </div>
+                <div>
+                    <p:commandButton id="absenden"
+                                     value="#{msgs.speichern}"
+                                     action="#{LoginForm.PasswortAendernSpeichern}"
 
-            <!-- repeat new password -->
-            <h:outputLabel for="newPasswordRepeat" value="#{msgs.confirmNewPassword}"/>
-            <p:password redisplay="true" id="newPasswordRepeat"
-                        style="width: 200px;margin-right:15px"
-                        value="#{LoginForm.passwortAendernNeu2}"
-                        label="#{msgs.confirmNewPassword}"
-                        required="true"
-                        match="newPassword"
-                        validatorMessage="#{msgs.passwordsDontMatch}"/>
-
-            <p:commandButton id="absenden"
-                             value="#{msgs.speichern}"
-                             action="#{LoginForm.PasswortAendernSpeichern}"
-
-                             icon="fa fa-floppy-o fa-lg"
-                             iconPos="right"
-                             validateClient="true"
-                             styleClass="button-filled-blue">
-                <f:ajax execute="@form" render="@form"/>
-            </p:commandButton>
+                                     icon="fa fa-floppy-o fa-lg"
+                                     iconPos="right"
+                                     validateClient="true"
+                                     styleClass="button-filled-blue">
+                        <f:ajax execute="@form" render="@form"/>
+                    </p:commandButton>
+                </div>
+            </p:row>
+            <p:row/>
+            <p:row/>
         </p:panelGrid>
     </h:form>
 </ui:composition>
