--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -69,6 +69,8 @@
                             <li class="nav-pic-text"><h:link value="#{msgs.projekte}" outcome="projects" onclick="#{ProzessverwaltungForm.setDisplayMode(objectMode.TEMPLATE)}"><i class="fa fa-folder-open fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.benutzer}" outcome="users"><i class="fa fa-user fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.modules}" outcome="newTaskManager"><i class="fa fa-puzzle-piece fa-lg"/></h:link></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.clients}" outcome="clients"><i
+                                class="fa fa-suitcase fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.help}" outcome="help"><i class="fa fa-life-ring fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.indexing}" outcome="indexingPage"><i class="fa fa-database fa-lg"/></h:link></li>
                         </ul>
