Replace Kitodo logo with Kitodo icon at low resolutions

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -19,7 +19,7 @@
     <div class="wrapper">
 
         <section id="portal-logo">
-            <h:graphicImage name="images/kitodo-logo.svg" alt="Kitodo.Production" width="160"/>
+            <h:graphicImage name="images/kitodo-logo.svg" alt="Kitodo.Production" width="160" id="kitodo-logo"/>
             <h:graphicImage name="images/kitodo-icon.svg" alt="Kitodo.Production" width="40" id="kitodo-icon"/>
         </section>
 
