Reposition breadcrumb menu at low resolutions

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -374,7 +374,7 @@ body.first-visit #portal-header {
     text-align: left;
     color: #fff;
     font-size: 0px;
-    width: 50%;
+    width: 100%;
     }
 
 #breadcrumb li {
@@ -860,6 +860,10 @@ min 700px
 
     #kitodo-icon {
         display: none;
+        }
+
+    #breadcrumb {
+        width: 50%;
         }
 
     #header-nav li ul {
