--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/details.xhtml
@@ -19,7 +19,10 @@
         <p:row>
             <div>
                 <p:outputLabel for="title" value="#{msgs.prozessTitel}"/>
-                <p:inputText id="title" placeholder="#{msgs.prozessTitel}" value="#{ProzessverwaltungForm.newProcessTitle}" required="true"/>
+                <p:inputText id="title" placeholder="#{msgs.prozessTitel}"
+                             value="#{ProzessverwaltungForm.newProcessTitle}"
+                             class="input"
+                             required="true"/>
             </div>
 
             <div>
