--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
@@ -25,7 +25,7 @@
             <h:outputText value="#{item.value}" rendered="#{item.type.name ne 'link'}"/>
             <h:outputLink title="#{item.value}" value="#{item.value}" rendered="#{item.type.name eq 'link'}"/>
         </p:column>
-        <p:column headerText="#{msgs.choice}">
+        <p:column headerText="#{msgs.choice}" styleClass="actionsColumn">
             <p:commandLink title="#{msgs.bearbeiten}" oncomplete="PF('editPropertyDialog').show()">
                 <i class="fa fa-pencil-square-o fa-lg"/>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
